--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = { version = "0.12" }
+bevy = { git = "https://github.com/bevyengine/bevy" }
 
 image = "0.24"
 anyhow = "1.0"
