--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ image = "0.24"
 anyhow = "1.0"
 threadpool = "1.8"
 futures-lite = "1.12"
+argh = "0.1.12"
 
 [profile.dev.package."*"]
 opt-level = 3
