--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.13"
+bevy = { version = "0.13" }
+#bevy = { git = "https://github.com/bevyengine/bevy", rev = "ec418aa429142972032f56a43ab963bd3be766d4" }
+#bevy = { git = "https://github.com/pcwalton/bevy", branch = "uberbuffers" }
 
 image = "0.24"
 anyhow = "1.0"
@@ -17,3 +19,7 @@ opt-level = 3
 
 [profile.dev]
 opt-level = 3
+
+[features]
+#default = ["bevy_main"]
+bevy_main = [] #Note: you need to manually change the bevy dependency
