--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = { version = "0.14" }
-#bevy = { version = "0.13" }
+bevy = { git = "https://github.com/bevyengine/bevy" }
 
-image = "0.24"
+image = "0.25.2"
 anyhow = "1.0"
 threadpool = "1.8"
 futures-lite = "1.12"
