--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,30 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = { git = "https://github.com/bevyengine/bevy" }
+bevy = { version = "0.16" }
 
 image = "0.25.2"
 anyhow = "1.0"
 threadpool = "1.8"
-futures-lite = "1.12"
+futures-lite = "2.6"
 argh = "0.1.12"
+intel_tex_2 = { version = "0.4.0", optional = true }
+zstd = { version = "0.13.2", optional = true }
 
 [profile.dev.package."*"]
 opt-level = 3
 
 [profile.dev]
 opt-level = 3
+
+
+[features]
+
+# mipmap_generator features (Copied from https://github.com/DGriffin91/bevy_mod_mipmap_generator)
+default = ["debug_text"]
+compress = ["dep:intel_tex_2", "dep:zstd"]
+debug_text = ["bevy/bevy_ui"]
+pbr_transmission_textures = ["bevy/pbr_transmission_textures"]
+pbr_multi_layer_material_textures = ["bevy/pbr_multi_layer_material_textures"]
+pbr_anisotropy_texture = ["bevy/pbr_anisotropy_texture"]
+pbr_specular_textures = ["bevy/pbr_specular_textures"]
